# nodecode

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  decodeless_header-config.cmake
include/decodeless/: header.hpp
include/nodecode/: allocate.hpp  header.hpp
test/: CMakeLists.txt
test/src/: header.cpp  test_header.cpp
